--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+# bcbioBase 0.2.17 (2018-07-09)
+
+## Minor changes
+
+- Now requiring [ggplot2][] v3.0 internally.
+- Switched to using `aes()` instead of `aes_string()` internally, using
+  tidyeval.
+- Updated viridis functions in reexports.
+
+
+
 # bcbioBase 0.2.16 (2018-06-28)
 
 ## Minor changes
