--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,13 @@
 # bcbioBase 0.2.17 (2018-07-09)
 
+## Major changes
+
+- Heatmap functions (`plotHeatmap()`, `plotCorrelationHeatmap()`, and
+  `plotQuantileHeatmap()`) now only provide method support for
+  `SummarizedExperiment` class objects, for better simplicity and metadata
+  handling. The internal method code has been consolidated and simplified,
+  working internally on the main assay inside the S4 object.
+
 ## Minor changes
 
 - Now requiring [ggplot2][] v3.0 internally.
