--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@
 
 ## Minor changes
 
+- Offloaded `separatorBar` and `updateMsg` to [basejump][].
 - Now using roxygen2 v6.1 for documentation.
 - Miscellaneous documentation improvements.
 - Simplified installation instructions, referring the user to [bcbioRNASeq][]
