Simplify NEWS so that pkgdown doesn't attempt to autolink

--- a/NEWS
+++ b/NEWS
@@ -4,12 +4,12 @@ Release candidate for [Bioconductor][] submission.
 
 ## New functions
 
-- `projectDir()`, which returns the dated project directory path. If there are
+- `projectDir`, which returns the dated project directory path. If there are
   multiple dated directories (not recommended), the most recent one is returned.
 
 ## Major changes
 
-- `readTx2gene()` now returns `tx2gene` class object.
+- `readTx2gene` now returns `tx2gene` class object.
 - Pinning to [basejump][] v0.99.0 [Bioconductor][] release candidate.
 - Migrated [ggplot2][] geoms to [basejump][] package.
 - YAML functions now return `DataFrame` instead of `data.frame`.
@@ -25,20 +25,20 @@ Release candidate for [Bioconductor][] submission.
 
 ### New functions
 
-- `projectDir()`: Returns the latest dated directory path inside a [bcbio][]
+- `projectDir`: Returns the latest dated directory path inside a [bcbio][]
   run. If [bcbio][] has been run multiple times to the same upload directory,
   the function will return the latest project directory and warn the user.
 
 ### Major changes
 
-- `sampleDirs()` is now stricter about loading sample directories with names
+- `sampleDirs` is now stricter about loading sample directories with names
   that are not valid in [R][]. This now checks for non-alphanumeric characters,
   including spaces, **dashes**, and samples that begin with a number. The
   [bcbio][] pipeline will be updated to enforce these rules, to avoid unexpected
   downstream behavior in [R][] due to invalid names.
 - Improved camel case sanitization of metrics columns in the YAML parser. Now
-  `readYAMLSampleMetrics()` should return `percentGC` instead of `xGC`. 5'->3'
-  bias should return as `x5x3Bias`. The `plyr::ldply()` call used to coerce
+  `readYAMLSampleMetrics` should return `percentGC` instead of `xGC`. 5'->3'
+  bias should return as `x5x3Bias`. The `plyr::ldply` call used to coerce
   from a `list` to `data.frame` will sanitize names, so we need to apply our
   rules before this step.
 
@@ -51,7 +51,7 @@ Release candidate for [Bioconductor][] submission.
 
 ### Minor changes
 
-- `prepareTemplate()`: Migrated function to [basejump][] package, and simplifed
+- `prepareTemplate`: Migrated function to [basejump][] package, and simplifed
   to copy all files from `rmarkdown/shared` directory inside a package.
   Currently in use by [bcbioRNASeq][] and [bcbioSingleCell][].
 
