Update version to v0.5.8

--- a/NEWS
+++ b/NEWS
@@ -1,27 +1,30 @@
-## bcbioBase 0.99.0 (2018-09-14)
-
-Release candidate for [Bioconductor][] submission.
-
-## New functions
-
-- `projectDir`, which returns the dated project directory path. If there are
-  multiple dated directories (not recommended), the most recent one is returned.
-
-## Major changes
-
-- `readTx2gene` now returns `tx2gene` class object.
-- Pinning to [basejump][] v0.99.0 [Bioconductor][] release candidate.
-- Migrated [ggplot2][] geoms to [basejump][] package.
-- YAML functions now return `DataFrame` instead of `data.frame`.
-
-## Minor changes
-
-- Simplified NAMESPACE imports.
-- Updated deprecations.
-- Linking out to recommended guidelines for development.
+## bcbioBase 0.5.8 (2019-01-07)
 
 
-## bcbioBase 0.4.2 (2018-08-26)
+## bcbioBase 0.5.7 (2018-12-21)
+
+
+## bcbioBase 0.5.6 (2018-12-12)
+
+
+## bcbioBase 0.5.5 (2018-11-29)
+
+
+## bcbioBase 0.5.4 (2018-11-26)
+
+
+## bcbioBase 0.5.3 (2018-11-25)
+
+
+## bcbioBase 0.5.2 (2018-11-19)
+
+
+## bcbioBase 0.5.1 (2018-11-15)
+
+
+## bcbioBase 0.5.0 (2018-09-14)
+
+Working towards a release candidate for [Bioconductor][] submission.
 
 ### New functions
 
@@ -29,8 +32,12 @@ Release candidate for [Bioconductor][] submission.
   run. If [bcbio][] has been run multiple times to the same upload directory,
   the function will return the latest project directory and warn the user.
 
-### Major changes
+## Major changes
 
+- `readTx2gene` now returns a `tx2gene` class object.
+- Pinning to [basejump][] [Bioconductor][] release candidate.
+- Migrated [ggplot2][] geoms to [basejump][] package.
+- YAML functions now return `DataFrame` instead of `data.frame`.
 - `sampleDirs` is now stricter about loading sample directories with names
   that are not valid in [R][]. This now checks for non-alphanumeric characters,
   including spaces, **dashes**, and samples that begin with a number. The
@@ -42,8 +49,11 @@ Release candidate for [Bioconductor][] submission.
   from a `list` to `data.frame` will sanitize names, so we need to apply our
   rules before this step.
 
-### Minor changes
+## Minor changes
 
+- Simplified NAMESPACE imports.
+- Updated deprecations.
+- Linking out to recommended guidelines for development.
 - Moved global `lanePattern` variable to [basejump][] package.
 
 
