--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+## bcbioBase 0.5.12 (2019-02-11)
+
+### Minor changes
+
+- `runDate()`: Updated assert check to be compatible with R 3.4 / BioC 3.6.
+
+
+## bcbioBase 0.5.11 (2019-01-22)
+
+
+## bcbioBase 0.5.10 (2019-01-17)
+
+
+## bcbioBase 0.5.9 (2019-01-13)
+
+
 ## bcbioBase 0.5.8 (2019-01-07)
 
 
