--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+## bcbioBase 0.5.14 (2019-03-22)
+
+### Minor changes
+
+- Updated GitHub remotes to use acidgenomics instead of steinbaugh.
+
+
+
 ## bcbioBase 0.5.13 (2019-03-18)
 
 ### Minor changes
@@ -15,6 +23,7 @@
 ### Minor changes
 
 - `runDate()`: Updated assert check to be compatible with R 3.4 / BioC 3.6.
+
 
 
 ## bcbioBase 0.5.11 (2019-01-22)
@@ -128,6 +137,7 @@
 - Migrating to [goalie][] package for internal assert checks.
 
 
+
 ## bcbioBase 0.5.0 (2018-09-14)
 
 Working towards a release candidate for [Bioconductor][] submission.
@@ -163,6 +173,7 @@ Working towards a release candidate for [Bioconductor][] submission.
 - Moved global `lanePattern` variable to [basejump][] package.
 
 
+
 ## bcbioBase 0.4.1 (2018-08-19)
 
 ### Minor changes
@@ -170,6 +181,7 @@ Working towards a release candidate for [Bioconductor][] submission.
 - `prepareTemplate`: Migrated function to [basejump][] package, and simplifed
   to copy all files from `rmarkdown/shared` directory inside a package.
   Currently in use by [bcbioRNASeq][] and [bcbioSingleCell][].
+
 
 
 ## bcbioBase 0.4.0 (2018-08-08)
@@ -194,6 +206,7 @@ with the [bcbio][] output directories.
   simplicity.
 
 
+
 ## bcbioBase 0.3.2 (2018-07-31)
 
 ### Minor changes
@@ -206,6 +219,7 @@ with the [bcbio][] output directories.
 - [lintr][] check fixes.
 
 
+
 ## bcbioBase 0.3.1 (2018-07-24)
 
 ### Minor changes
@@ -214,6 +228,7 @@ with the [bcbio][] output directories.
 - Improved documentation, specifying the supported types for each argument more
   clearly.
 - Improved messages in `readYAML` family of functions.
+
 
 
 ## bcbioBase 0.3.0 (2018-07-17)
@@ -249,6 +264,7 @@ with the [bcbio][] output directories.
 - Updated unit tests to reflect changes in the number of exported generics.
 
 
+
 ## bcbioBase 0.2.16 (2018-06-28)
 
 ### Minor changes
@@ -281,6 +297,7 @@ with the [bcbio][] output directories.
 - Reorganized assert checks imports in `bcbioBase-package.R` file.
 
 
+
 ## bcbioBase 0.2.14 (2018-05-18)
 
 ### Minor changes
@@ -290,6 +307,7 @@ with the [bcbio][] output directories.
 - Added `sampleData<-` method support for standard `data.frame`.
 
 
+
 ## bcbioBase 0.2.13 (2018-05-07)
 
 ### Minor changes
@@ -297,6 +315,7 @@ with the [bcbio][] output directories.
 - Added `overwrite` parameter to `prepareTemplate`, disabled by default.
 - Removed validity check for `sampleData` accessor.
 - Improved vector return in `sampleNames`.
+
 
 
 ## bcbioBase 0.2.12 (2018-05-08)
@@ -310,11 +329,13 @@ with the [bcbio][] output directories.
   package.
 
 
+
 ## bcbioBase 0.2.11 (2018-05-07)
 
 ### New methods
 
 - Added `SummarizedExperiment` method support for `sampleNames` generic.
+
 
 
 ## bcbioBase 0.2.10 (2018-05-03)
@@ -324,6 +345,7 @@ with the [bcbio][] output directories.
 - Exporting [ggplot2][] convenience functions for easier plotting in
   [bcbioRNASeq][] and [bcbioSingleCell][] packages: `bcbio_geom_abline`,
   `bcbio_geom_label`, `bcbio_geom_label_average`, and `bcbio_geom_label_repel`.
+
 
 
 ## bcbioBase 0.2.9 (2018-04-30)
@@ -339,11 +361,13 @@ with the [bcbio][] output directories.
   example dataset.
 
 
+
 ## bcbioBase 0.2.8 (2018-04-25)
 
 ### Minor changes
 
 - Split out assertive imports so we can pin release to [bioconda][].
+
 
 
 ## bcbioBase 0.2.7 (2018-04-25)
@@ -356,12 +380,14 @@ with the [bcbio][] output directories.
   `sampleID`.
 
 
+
 ## bcbioBase 0.2.6 (2018-04-25)
 
 ### Minor changes
 
 - Using `make.names` instead of `make.unique` in `convertGenesToSymbols` method
   for `SummarizedExperiment` class.
+
 
 
 ## bcbioBase 0.2.5 (2018-04-24)
@@ -392,6 +418,7 @@ with the [bcbio][] output directories.
 - `prepareSampleData` is no longer needed and is now defunct.
 
 
+
 ## bcbioBase 0.2.4 (2018-04-22)
 
 ### Minor changes
@@ -401,6 +428,7 @@ with the [bcbio][] output directories.
 - `readSampleData`: switched to using `merge` instead of `left_join` internally.
 - Reexporting viridis family of color functions, including `inferno`, and
   the British variant `scale_colour_viridis`.
+
 
 
 ## bcbioBase 0.2.3 (2018-04-19)
@@ -416,6 +444,7 @@ with the [bcbio][] output directories.
 
 - Improved unit tests for `convertGenesToSymbols` and `gene2symbol`.
 - Miscellaneous documentation fixes.
+
 
 
 ## bcbioBase 0.2.1 (2018-04-13)
@@ -489,9 +518,11 @@ with the [bcbio][] output directories.
 - Made `annotable` method on `SummarizedExperiment` objects defunct.
 
 
+
 ## bcbioBase 0.1.4 (2018-02-20)
 
 - Don't include sample metadata in `summaryYAMLMetrics` return.
+
 
 
 ## bcbioBase 0.1.3 (2018-02-19)
@@ -499,10 +530,12 @@ with the [bcbio][] output directories.
 - Now exporting `assertFormalInterestingGroups` in camel case.
 
 
+
 ## bcbioBase 0.1.2 (2018-02-18)
 
 - Added back `checkInterestingGroups` since this code is still present on
   [bcbioRNASeq][] master branch.
+
 
 
 ## bcbioBase 0.1.1 (2018-02-17)
@@ -514,6 +547,7 @@ with the [bcbio][] output directories.
   `checkInterestingGroups`.
 
 
+
 ## bcbioBase 0.1.0 (2018-02-13)
 
 - Preparing version pinning for [bioconda][]. Relaxed [rlang][] dependency from
@@ -522,6 +556,7 @@ with the [bcbio][] output directories.
   and returns [Dropbox][] paths using [rdrop2][].
 - Updated [basejump][] dependency to v0.2.1.
 - Added assertive checks for all functions.
+
 
 
 ## bcbioBase 0.0.3 (2018-01-27)
@@ -536,6 +571,7 @@ with the [bcbio][] output directories.
 - Improved code coverage to 100%.
 
 
+
 ## bcbioBase 0.0.2 (2018-01-19)
 
 - Re-export `assignAndSaveData`, `loadData`, `loadRemoteData`, `saveData` from
@@ -543,13 +579,15 @@ with the [bcbio][] output directories.
 - Update `prepareTemplate` function to use internally stored data.
 
 
+
 ## bcbioBase 0.0.1 (2018-01-11)
 
 - Initial release.
 
 
-[basejump]: http://steinbaugh.com/basejump/
-[bcbio]: http://bcb.io/
+
+[basejump]: http://basejump.acidgenomics.com/
+[bcbio]: https://bcbio-nextgen.readthedocs.io/
 [bcbioBase]: https://bioinformatics.sph.harvard.edu/bcbioBase/
 [bcbioRNASeq]: https://bioinformatics.sph.harvard.edu/bcbioRNASeq/
 [bcbioSingleCell]: http://bioinformatics.sph.harvard.edu/bcbioSingleCell/
@@ -557,7 +595,7 @@ with the [bcbio][] output directories.
 [Bioconductor]: http://bioconductor.org/
 [Dropbox]: https://www.dropbox.com/
 [ggplot2]: https://ggplot2.tidyverse.org/
-[goalie]: https://steinbaugh.com/goalie/
+[goalie]: https://goalie.acidgenomics.com/
 [lintr]: https://github.com/jimhester/lintr/
 [pheatmap]: https://github.com/raivokolde/pheatmap/
 [rdrop2]: https://github.com/karthik/rdrop2/
